--- a/app/less/simple.less
+++ b/app/less/simple.less
@@ -88,13 +88,15 @@
 	.clerfix();
 	display: none;
 	width: 1030px;
-  	height: auto;	
+  	height: 835px;	
 	background-color: #ffffff;	
 	box-shadow: 0px 28px 49px 0px rgba(0, 0, 0, 0.14);	
-	position: absolute;
+	position: fixed;
 	z-index: 10000;
 	left: 50%;
-    /*top: 20px;*/
+    top: 50%;
+	margin-top: -417px;
+				
     bottom: auto;
     right: auto;
     margin-left: -515px;
