--- a/app/less/blocks/disclaimer.less
+++ b/app/less/blocks/disclaimer.less
@@ -15,7 +15,7 @@
 		height: 60px;
 		padding: 20px 100px;
 		border-bottom: 1px solid #e6e6e6;
-		
+		cursor: pointer;
 	}
 
 	&__list-item:first-child {
