--- a/app/less/mixins.less
+++ b/app/less/mixins.less
@@ -17,7 +17,7 @@
 @import "blocks/disclaimer.less";
 @import "blocks/risks.less";
 @import "blocks/special.less";
-
+@import "blocks/successfully.less";
 
 .hidden {
 	display: none;
