--- a/app/less/scaffolding.less
+++ b/app/less/scaffolding.less
@@ -206,9 +206,10 @@ a {
 
 
 
-.no-bg() {
-	background-image: none;
-	background-color: #ffffff;
+.no-bg {
+	background-image: none !important;
+	background-color: #f3f3f3 !important;
+	height: auto !important;
 }
 
 
