--- a/app/css/style.css
+++ b/app/css/style.css
@@ -143,6 +143,11 @@ a {
   display: block;
   height: 80px;
 }
+.no-bg {
+  background-image: none !important;
+  background-color: #f3f3f3 !important;
+  height: auto !important;
+}
 .block-border-shadow {
   display: block;
   width: 100%;
@@ -1422,6 +1427,63 @@ table.table--modal2 tr td {
 .special__block-right .input-wrapper {
   padding-top: 0;
   padding-bottom: 10px;
+}
+.successfully {
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding-top: 150px;
+}
+.successfully .gray {
+  font-family: 'museo_sans_cyrl100', sans-serif;
+  font-size: 24px;
+  color: #b6b6b6;
+  padding-top: 100px;
+}
+.successfully h2 {
+  padding: 15px;
+}
+.successfully .link {
+  padding-top: 90px;
+  font-size: 16px;
+}
+.successfully .link i {
+  display: inline-block;
+  vertical-align: middle;
+  width: 35px;
+  height: 35px;
+  margin-right: 30px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 35px;
+  background-image: -webkit-gradient(linear, left top, right top, from(#a81c1c), to(#dc161b));
+  background-image: -webkit-linear-gradient(left, #a81c1c 0%, #dc161b 100%);
+  background-image: linear-gradient(to right, #a81c1c 0%, #dc161b 100%);
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35);
+          box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35);
+}
+.ok {
+  width: 100%;
+  text-align: center;
+}
+.ok i {
+  display: inline-block;
+  width: 90px;
+  height: 90px;
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  background-image: url(../img/ok.png), -webkit-gradient(linear, left top, right top, from(#a81c1c), to(#dc161b));
+  background-image: url(../img/ok.png), -webkit-linear-gradient(left, #a81c1c 0%, #dc161b 100%);
+  background-image: url(../img/ok.png), linear-gradient(to right, #a81c1c 0%, #dc161b 100%);
+  background-position: center;
+  background-repeat: no-repeat;
+  -webkit-box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35), 0 0 0 50px #f8f6f6, 0 0 0 52px #e9e9e9;
+          box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35), 0 0 0 50px #f8f6f6, 0 0 0 52px #e9e9e9;
 }
 .hidden {
   display: none;
