--- a/app/less/mixins.less
+++ b/app/less/mixins.less
@@ -96,6 +96,16 @@
   font-size: @size;   
 }
 
+.text-audi(@size) {  
+  font-family: 'AudiType Ext', sans-serif;
+  font-size: @size;   
+}
+
+.text-audi-bold(@size) {  
+  font-family: 'AudiType Ext Bold', sans-serif;
+  font-size: @size;   
+}
+
 
 
 
