--- a/app/css/stylename.css
+++ b/app/css/stylename.css
@@ -10,8 +10,6 @@
     font-style: normal;
 
 }
-
-
 @font-face {
     font-family: 'museo_sans_cyrl100';
     src: url('../fonts/ofont.ru_museo_sans_cyrl_100-webfont.eot');
@@ -24,10 +22,6 @@
     font-style: normal;
 
 }
-
-
-
-
 @font-face {
     font-family: 'museo_sans_cyrl500';
     src: url('../fonts/ofont.ru_museo_sans_cyrl_500-webfont.eot');
@@ -38,12 +32,7 @@
          url('../fonts/ofont.ru_museo_sans_cyrl_500-webfont.svg#museo_sans_cyrl500') format('svg');
     font-weight: normal;
     font-style: normal;
-
 }
-
-
-
-
 @font-face {
     font-family: 'museo_sans_cyrl900';
     src: url('../fonts/ofont.ru_museo_sans_cyrl_900-webfont.eot');
@@ -55,4 +44,23 @@
     font-weight: normal;
     font-style: normal;
 
+}
+
+/**************************************************************/
+
+@font-face{
+	font-family: 'AudiType Ext';
+	font-weight: 400;
+	src:url("../fonts2/AudiType-ExtendedNormal.eot");
+	src:url("../fonts2/AudiType-ExtendedNormal.eot?#iefix") format("embedded-opentype"),
+		url("../fonts2/AudiType-ExtendedNormal.woff") format("woff"),
+		url("../fonts2/AudiType-ExtendedNormal.otf") format("opentype")
+	}
+@font-face{
+	font-family: 'AudiType Ext Bold';
+	font-weight: 700;
+	src:url("../fonts2/AudiType-ExtendedBold.eot");
+	src:url("../fonts2/AudiType-ExtendedBold.eot?#iefix") format("embedded-opentype"),
+		url("../fonts2/AudiType-ExtendedBold.woff") format("woff"),
+		url("../fonts2/AudiType-ExtendedBold.otf") format("opentype")
 }
