--- a/app/css/style.css
+++ b/app/css/style.css
@@ -666,8 +666,14 @@ a {
 .main-footer-bg {
   padding-top: 10px;
   background-color: #f3f3f3;
-  height: 110px;
-  margin-top: -110px;
+  height: 105px;
+  margin-top: -105px;
+}
+@media (max-width: 1230px) {
+  .main-footer-bg {
+    height: 130px;
+    margin-top: -130px;
+  }
 }
 .main-header,
 .main-footer {
@@ -2190,14 +2196,49 @@ table.table--modal2 tr td {
   text-align: center;
   padding-top: 150px;
 }
+@media (max-width: 1230px) {
+  .successfully {
+    padding-top: 80px;
+  }
+}
+@media (max-width: 768px) {
+  .successfully {
+    padding-top: 40px;
+  }
+}
 .successfully .gray {
   font-family: 'museo_sans_cyrl100', sans-serif;
   font-size: 24px;
   color: #b6b6b6;
   padding-top: 100px;
 }
+@media (max-width: 1230px) {
+  .successfully .gray {
+    font-size: 20px;
+    padding-top: 70px;
+  }
+}
+@media (max-width: 768px) {
+  .successfully .gray {
+    font-size: 16px;
+    padding-top: 40px;
+  }
+}
+.successfully p {
+  font-size: 16px;
+}
+@media (max-width: 768px) {
+  .successfully p {
+    font-size: 14px;
+  }
+}
 .successfully h2 {
   padding: 15px;
+}
+@media (max-width: 768px) {
+  .successfully h2 {
+    padding: 8px;
+  }
 }
 .successfully .link {
   padding-top: 90px;
@@ -2223,6 +2264,19 @@ table.table--modal2 tr td {
   -webkit-box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35);
           box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35);
 }
+@media (max-width: 1230px) {
+  .successfully .link {
+    font-size: 16px;
+    padding-top: 50px;
+  }
+}
+@media (max-width: 768px) {
+  .successfully .link {
+    font-size: 14px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
 .ok {
   width: 100%;
   text-align: center;
@@ -2241,6 +2295,23 @@ table.table--modal2 tr td {
   -webkit-box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35), 0 0 0 50px #f8f6f6, 0 0 0 52px #e9e9e9;
           box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35), 0 0 0 50px #f8f6f6, 0 0 0 52px #e9e9e9;
 }
+@media (max-width: 1230px) {
+  .ok i {
+    width: 70px;
+    height: 70px;
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35), 0 0 0 30px #f8f6f6, 0 0 0 32px #e9e9e9;
+            box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35), 0 0 0 30px #f8f6f6, 0 0 0 32px #e9e9e9;
+  }
+}
+@media (max-width: 768px) {
+  .ok i {
+    width: 60px;
+    height: 60px;
+    background-size: auto;
+    -webkit-box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35), 0 0 0 20px #f8f6f6, 0 0 0 22px #e9e9e9;
+            box-shadow: 0px 3px 7px 0px rgba(234, 28, 28, 0.35), 0 0 0 20px #f8f6f6, 0 0 0 22px #e9e9e9;
+  }
+}
 .hidden {
   display: none;
 }
@@ -2258,4 +2329,9 @@ table.table--modal2 tr td {
           box-sizing: border-box;
   padding: 0 0 65px 0;
   min-height: 100vh;
+}
+@media (max-width: 1230px) {
+  .wrapper-y {
+    padding: 0 0 130px 0;
+  }
 }
