--- a/app/less/mixins.less
+++ b/app/less/mixins.less
@@ -36,6 +36,12 @@
 	box-sizing: border-box;
 	padding: 0 0 @height-footer 0;
 	min-height: 100vh;
+
+	@media @tablet-widths {
+		padding: 0 0 @nav-min-height-mobil 0;
+	}
+
+	
 }
 
 .clerfix() {
