--- a/app/less/scaffolding.less
+++ b/app/less/scaffolding.less
@@ -35,7 +35,11 @@ body {
 	
 }
 
-
+.mobil-block {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
 
 h1, h2, h3, h5 {	
 	font-style: normal;
