--- a/app/less/blocks/form-1.less
+++ b/app/less/blocks/form-1.less
@@ -56,4 +56,14 @@
 			button {margin-top: 10px;}
 		}
 	}
+
+	@media @tablet-widths {
+		.input-wrapper.mobil-block {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
 }
+
+
